    #.(MAKE-PATHNAME :HOST NIL :DEVICE NIL :DIRECTORY '(:RELATIVE) :NAME NIL
                     :TYPE NIL :VERSION :NEWEST :DEFAULTS NIL)

 - WITH-CSTRING automatically coerces extended strings to base strings,
   signalling an error when this is not possible.

 - New command line arguments, --heap-size, --lisp-stack, --frame-stack and
   --c-stack control the different memory limits.

 - The out of memory error (ext:storage-exhausted) can now be recovered.
   By default a correctable error is signaled and the user is given the
   chance to increase the heap size.

* Function names:

 - Added a new section in external.h for defining compatibility macros
   for functions that changed name.

 - make_longfloat() is renamed ecl_make_longfloat().

 - Some functions got new names: ecl_make_cfun, ecl_make_cfun_va,
   ecl_make_cclosure_va, ecl_def_c_function, ecl_def_c_function_va.

* Numerics:

 - A new configuration flag --with-ieee-fp adds support for NaN's, infinities
   and signed zeros, disabling certain floating point exceptions by default.
   In addition, when this is set, functions like LOG or ATAN will not
   signal errors when their arguments are not valid, but rather return NaN's
   (LOG 0) => -infinity, (ATAN 0.0 0.0) => NaN

 - A new command line option --trap-fpe / --no-trap-fpe tells whether ECL
   should ignore floating point exceptions and produce NaNs and infinities
   or either use the condition system to produce the associated errors.

 - Two new functions, EXT:FLOAT-NAN-P and EXT:FLOAT-INFINITY-P.

 - Eight new constants for the eight possible infinities
   EXT:{SHORT,SINGLE,DOUBLE,LONG}-FLOAT-{POSITIVE,NEGATIVE}-INFINITY

* Interrupt handling:

 - Under Mac OS/X, ECL now uses its own modified version of the Boehm-Weiser
   garbage collector that allows both --enable-gengc and our optimized
   code for signal handling.

 - New condition EXT:SEGMENTATION-VIOLATION signaled by SIGSEGV and SIGBUS
   events.
