@@ -75,8 +75,8 @@ static cl_fixnum option_values[ECL_OPT_LIMIT+1] = {
 	128,		/* ECL_OPT_FRAME_STACK_SAFETY_AREA */
 	32768,		/* ECL_OPT_LISP_STACK_SIZE */
 	128,		/* ECL_OPT_LISP_STACK_SAFETY_AREA */
-	256*1024,	/* ECL_OPT_C_STACK_SIZE */
-	16*1024,	/* ECL_OPT_C_STACK_SAFETY_AREA */
+	4*1024*1024,	/* ECL_OPT_C_STACK_SIZE */
+	128*1024,	/* ECL_OPT_C_STACK_SAFETY_AREA */
 	1,		/* ECL_OPT_SIGALTSTACK_SIZE */
 	256*1024*1024, 	/* ECL_OPT_HEAP_SIZE */
 	1024*1024, 	/* ECL_OPT_HEAP_SAFETY_AREA */
